[FIX] estate, estate_account, hr_fingerprint_ams, hr_fingerprint_reportint_ams: various update
* estate_account: #647 - jurnal hutang salah
**  query upkeep should included upkeep with state = payslip (and correction also).
* estate: #641 - error at payslip for archived labor
** query should included correction and payslip state

[ADD] hr_fingerprint_ams,hr_fingerprint_report: use odoo to create report
* Laporan Presensi. Stored computed field required manual delete column and upgrade apps.
* #645 - helps user view upkeep labour from upfingerprint

--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -35,6 +35,7 @@
                                 <field name="hour_overtime" widget="float_time"/>
                             </group>
                         </group>
+                        <separator string="Fingerprint Lines"/>
                         <field name="attendance_ids">
                             <tree colors="red:state=='draft'" default_order="name">
                                 <field name="employee_id"/>
@@ -293,6 +294,14 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <div class="oe_button_box" name="button_box" groups="base.group_hr_user">
+                            <button name="action_open_labour"
+                                class="oe_stat_button"
+                                icon="fa-wrench"
+                                type="object">
+                                <field name="upkeep_labour_count" widget="statinfo" string="Upkeep" help="Display upkeep labour."/>
+                            </button>
+                        </div>
                         <div class="oe_title">
                             <h1>
                                 <field name="name" readonly="1"/>
