[FIX] purchase_indonesia
#635 Penambahan Kolom Khusus Penandatangan untuk Presiden Direktur pada PP dan QCF
#628 Wrong Approval on Purchase Request
#627 Refinement Report Purchase Request

--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -271,7 +271,7 @@
 													<t t-if="is_warehouse == 0">	    
 					                                    <t t-foreach="o.message_ids" t-as="mids">
 															<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
-																<t t-if="mids_tracking.field == 'state' and mids_tracking.new_value_char == 'Done'">
+																<t t-if="mids_tracking.field == 'state' and (mids_tracking.new_value_char == 'Done' or mids_tracking.new_value_char == 'selesai')">
 																	<u>
 																	:&#160;<span t-field="mids.author_id"/>&#160;
 																	</u>
