--- a/purchase_indonesia/reports/report_purchase_request.xml
+++ b/purchase_indonesia/reports/report_purchase_request.xml
@@ -8,11 +8,11 @@
             		<t t-call="report.internal_layout">
 						<div class="page" style="font-family: times; background-color:white; color:black;">
 		              		<!-- Header -->
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
-		                       		<table class="noborder">
+		                       		<table class="noborder" width="100%">
 		                       		    <tr>
-		                       		        <td class="noborder" width="10%">
+		                       		        <td class="noborder" width="20%">
 		                       		            <b>Kepada</b>
 		                       		        </td>
 		                       		        <td class="noborder">
@@ -42,12 +42,12 @@
 							<br></br>
 							<br></br>
 							
-							<div class="row" style="text-align:center; font-size:20pt;">
+							<div class="row" style="text-align:center; font-size:16pt;">
 		              			<div class="col-xs-12" >
 		                       		<b>PENGAJUAN PENGADAAN BARANG &amp; JASA (PP)</b>
 								</div>
 							</div>
-							<div class="row" style="text-align:center; font-size:14pt;">
+							<div class="row" style="text-align:center; font-size:10pt;">
 								<div class="col-xs-12" >
 		                       		<b>No. <span t-field="o.complete_name"/> </b>
 								</div>
@@ -56,61 +56,60 @@
 							<br></br>
 							<br></br>
 							
-							<div class="row" style="text-align:left;font-size:14pt;">
+							<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		              				KATEGORI PP :
 		              			</div>
 		              		</div>
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		              				<span t-field="o.type_product"/>
 		              			</div>
 		              		</div>
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		              				<span t-field="o.type_purchase"/>, Tanggal Kebutuhan <span t-field="o.date_start"/>  
 		              			</div>
 		              		</div>
 		              		
 		              		<br></br>
-		              		<br></br>
 		              		
 		              		<!-- Variabel -->
 		           			<t t-set="idx" t-value="0"/>
 		           			
 		              		<!-- Detail Header -->
-		           			<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		           			<div class="row" style="text-align:left;font-size:10pt;">
+		              			<table style="border: 1px solid;padding:10px" width="100%">
 		                            <thead>
 			                            <tr class="label_table_header">
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      No
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Stock Code
 										    </th>
-										    <th>
-										      Nama Barang/Jasa (Part Name)
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
+										      Nama Barang/Jasa <br/> (Part Name)
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Jumlah
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Satuan
 										    </th>
-										    <th>
-										      Harga Perkiraan per Satuan
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
+										      Harga Perkiraan <br/> per Satuan
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Total Perkiraan Harga
 										    </th>
-											<th>
+											<th  >
 												Unit Control
 											</th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Budget Tersedia
 										    </th>
-											<th>
+											<th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Description
 										    </th>
 										</tr>
@@ -119,43 +118,43 @@
 										<t t-foreach="o.line_ids" t-as="l">
 										 	<t t-set="idx" t-value="idx+1"/>   	
 											<tr>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 											      	<span t-esc="idx"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: left;">
 											      	<span t-field="l.product_id.default_code"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: left;">
 											      	<span t-field="l.product_id.name"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 											      	<span t-field="l.product_qty"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 											      	<span t-field="l.product_uom_id"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: right;">
 											      	<span t-field="l.price_per_product"/>
 											    </td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: right;">
 											      	<span t-field="l.total_price"/>
 											    </td>
-												<td>
+												<td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 													<span t-field="l.control_unit"/>
 												</td>
-											    <td>
+											    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: right;">
 											      	<span t-field="l.budget_available"/>
 											    </td>
-												<td>
+												<td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: left;">
 											      	<span t-field="l.specifications"/>
 											    </td>
 											</tr>
 										</t>
 										<tr>
-										    <td colspan="6">
+										    <td colspan="6" style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;">
 										      Total
 										    </td>
-										    <td>
+										    <td style="border:1px solid;border-bottom:1px solid;height:30px;text-align: right;">
 										      <span t-field="o.total_estimate_price"/>
 										    </td>
 										    <td>
@@ -171,7 +170,7 @@
 									</tbody>	
 								</table>
 							</div>
-							<div class="row" style="text-align:left;font-size:14pt;">
+							<div class="row" style="text-align:left;font-size:10pt;">
 		              			<table width="100%">
 		              			    	<tr>
 			                                <td class="noborder">
@@ -188,7 +187,7 @@
 		              		
 							<br></br>
 							<br></br>
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<t t-if="o.type_budget == 'available' ">
 									<div class="col-xs-3" >
 		              					<span t-field="o.type_budget"/>
@@ -203,7 +202,7 @@
 		              				&#160;
 		              			</div>
 		              		</div>
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-3" >
 		              				&#160;  
 		              			</div>
@@ -218,7 +217,7 @@
 		              		</div>
 		              		
 		              		<!-- Tanda Tangan -->
-		                    <div class="row" style="text-align:left;font-size:14pt; display:none;">
+		                    <div class="row" style="text-align:left;font-size:10pt; display:none;">
 		                        <div class="col-xs-12">	
 			                        <table width="100%" class="noborder">
 			                            <tr>
@@ -516,7 +515,7 @@
 		                    </div>
 		                    
 		                    <!-- Tanda Tangan -->
-		                    <div class="row" style="text-align:left;font-size:14pt;">
+		                    <div class="row" style="text-align:left;font-size:10pt;">
 		                        <div class="col-xs-12">	
 			                        <table width="100%" class="noborder">
 			                            <tr>
@@ -602,7 +601,6 @@
 											    </t>
 											</t>
 										</t>
-			                                
 			                            
 										<t t-foreach="o.message_ids" t-as="mids">
 											<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
@@ -712,6 +710,15 @@
 											    </t>
 											</t>
 										</t>
+										
+										<t t-set="is_director_approval" t-value="0"/>
+										<t t-foreach="o.message_ids" t-as="mids">
+											<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+											    <t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'President Director Financial Approval'">
+												    <t t-set="is_director_approval" t-value="1"/>
+											    </t>
+											</t>
+										</t>
 			                               
 	                                    <t t-foreach="o.message_ids" t-as="mids">
 											<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
@@ -733,35 +740,56 @@
 															]
 														</td>    
 	                            					</tr>
+	                            				 <t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Director Financial Approval' and mids_tracking.new_value_char == 'President Director Financial Approval'">	
+	                            					<t t-if="is_director_approval == 0">
+	                            						<tr>
+							                            	<td class="noborder">
+							                                    Disetujui oleh President Director
+							                                </td>
+							                                <td class="noborder">
+							                                    :&#160;
+							                                    <br/>
+							                                    <br/>
+							                                    <br/>
+							                                    <br/>
+															    <u>
+															        &#160;Stanley Atmadja&#160;
+																</u>
+																<br/>
+																	&#160;President Director&#160;
+															</td>    
+		                            					</tr>
+	                            					</t>
+	                            				</t>	
 											    </t>
 											</t>
 										</t>
 			                                
-			                            
-	                                    <t t-foreach="o.message_ids" t-as="mids">
-											<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
-											    <t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'President Director Financial Approval'">
-												    <tr>
-						                            	<td class="noborder">
-						                                    Disetujui oleh President Director
-						                                </td>
-						                                <td class="noborder">
-						                                    :&#160;
-														    <u>
-														        <span t-field="mids.author_id"/>&#160;
-															</u>
-															<br/>
-															    <span t-field="mids.date"/>&#160;
-															[
-														        <span t-field="mids_tracking.old_value_char"/>&#160;to
-														        <span t-field="mids_tracking.new_value_char"/>
-															]
-														</td>    
-	                            					</tr>
-											    </t>
+			                            <t t-if="is_director_approval == 1">
+		                                    <t t-foreach="o.message_ids" t-as="mids">
+												<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+												    <t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'President Director Financial Approval'">
+													    <tr>
+							                            	<td class="noborder">
+							                                    Disetujui oleh President Director
+							                                </td>
+							                                <td class="noborder">
+							                                    :&#160;
+															    <u>
+															        <span t-field="mids.author_id"/>&#160;
+																</u>
+																<br/>
+																    <span t-field="mids.date"/>&#160;
+																[
+															        <span t-field="mids_tracking.old_value_char"/>&#160;to
+															        <span t-field="mids_tracking.new_value_char"/>
+																]
+															</td>    
+		                            					</tr>
+												    </t>
+												</t>
 											</t>
-										</t>
-			                                
+			                          	</t>      
 			                        </table>
 		                        </div>
 		                    </div>
