--- a/purchase_indonesia/reports/report_quotation_comparison_form.xml
+++ b/purchase_indonesia/reports/report_quotation_comparison_form.xml
@@ -17,7 +17,7 @@
 									<b>QUOTATION COMPARISON FORM</b>
 								</div>
 							</div>	
-							<div class="row" style="text-align:center; font-size:7pt;">
+							<div class="row" style="text-align:center; font-size:10pt;">
 								<div class="col-xs-12" >
 									<b>No. <span t-field="o.complete_name"/> </b>
 								</div>
@@ -27,7 +27,7 @@
 							</div>
 							
 							<!-- Sub Header -->
-							<div class="row" style="text-align:left;font-size:7pt;">
+							<div class="row" style="text-align:left;font-size:10pt;">
 								<div class="col-xs-12" >
 									<b>PP No. &amp; Date : <span t-field="o.origin"/> <span t-field="o.date_pp" t-field-options="{&quot;format&quot;: &quot;dd/MM/yyyy&quot;}"/> </b>
 								</div>
@@ -89,8 +89,8 @@
 								</t>
 							</t>	
 							
-							<div class="row" style="text-align:left;font-size:7pt;">
-								<table style="border: 1px solid;padding:10px" width="100%">
+							<div class="row" style="text-align:left;font-size:10pt;">
+								<table style="border: 1px solid;padding:10px;font-size:10pt;" width="100%">
 									<thead>        
 										<tr class="label_table_header">
 											<th rowspan="3" style="border-right:1px solid;border-bottom:2px solid;height:20px;text-align:center;" valign="center">
@@ -797,19 +797,9 @@
 									</tbody>	
 								</table>
 								<!--Remarks-->
-								<table width="100%" class="noborder">
+								<table width="100%" class="noborder" style="text-align:left;font-size:10pt;">
 									<tr>
-										<td colspan="6" class="noborder">
-											&#160;
-										</td>
-									</tr>
-									<tr>
-										<td colspan="6" class="noborder">
-											&#160;
-										</td>
-									</tr>
-									<tr>
-										<td colspan="6" class="noborder"> Recomendation/Remarks</td>
+										<td colspan="6" class="noborder"> Recommendation/Remarks</td>
 									</tr>
 									<tr>
 										<td class="noborder">
@@ -821,23 +811,18 @@
 
 							<!-- Tanda Tangan -->
 							<div class="row">
-								<div class="col-xs-6">	
+								<div class="col-xs-12">	
 									<table width="100%" class="noborder">
 										<tr>
-											<td colspan="6" class="noborder">
-												&#160;
-											</td>
-										</tr>
-										<tr>
-											<td colspan="2" class="noborder" style="text-align:left;font-size:7pt;">
+											<td colspan="2" class="noborder" style="text-align:left;font-size:10pt;">
 											  Proposed By
 											</td>
-											<td colspan="4" class="noborder" style="text-align:left;font-size:7pt;">
+											<td colspan="4" class="noborder" style="text-align:left;font-size:10pt;">
 											  Approved By
 											</td>
 										</tr>
 										<tr>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Draft'">
@@ -846,7 +831,7 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Draft'">
@@ -863,7 +848,7 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Head of the Representative Office'">
@@ -872,7 +857,7 @@
 													</t>
 												</t>	
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												 <t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Head of the Representative Office'">
@@ -889,7 +874,17 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											
+											<t t-set="is_director_approval" t-value="0"/>
+											<t t-foreach="o.message_ids" t-as="mids">
+												<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+												    <t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval President Director'">
+													    <t t-set="is_director_approval" t-value="1"/>
+												    </t>
+												</t>
+											</t>
+											
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Director'">
@@ -898,7 +893,7 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Director'">
@@ -917,10 +912,10 @@
 											</td>
 										</tr>
 										<tr>
-											<td colspan="2" class="noborder" style="text-align:left;font-size:7pt;">
+											<td colspan="2" class="noborder" style="text-align:left;font-size:10pt;">
 												&#160;
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Finance'">
@@ -929,7 +924,7 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Finance'">
@@ -946,38 +941,52 @@
 													</t>
 												</t>
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
-												<t t-foreach="o.message_ids" t-as="mids">
-													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
-														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval President Director'">
-															President Director
-														</t>
+											
+											<t t-foreach="o.message_ids" t-as="mids">
+												<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+													<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Director'">
+														<t t-if="is_director_approval == 0">
+													    	<td style="border-right: 1px solid; border-left: 1px solid; border-top: 1px solid; text-align:center;font-size:10pt;" colspan="2">
+							                                    Disetujui oleh President Director
+															</td>   
+													    </t>
 													</t>
 												</t>
-											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
-												<t t-foreach="o.message_ids" t-as="mids">
-													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
-														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval President Director'">
-															<u>
-																<span t-field="mids.author_id"/>&#160;
-															</u>
-															<br/>
-																<span t-field="mids.date"/>&#160;
-															[
-																<span t-field="mids_tracking.old_value_char"/>&#160;to
-																<span t-field="mids_tracking.new_value_char"/>
-															]
+											</t>
+											<t t-if="is_director_approval == 1">		    
+												<td class="noborder" style="text-align:left;font-size:10pt;">
+													<t t-foreach="o.message_ids" t-as="mids">
+														<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+															<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval President Director'">
+																President Director
+															</t>
 														</t>
 													</t>
-												</t>
-											</td>
+												</td>
+												<td class="noborder" style="text-align:left;font-size:10pt;">
+													<t t-foreach="o.message_ids" t-as="mids">
+														<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+															<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval President Director'">
+																<u>
+																	<span t-field="mids.author_id"/>&#160;
+																</u>
+																<br/>
+																	<span t-field="mids.date"/>&#160;
+																[
+																	<span t-field="mids_tracking.old_value_char"/>&#160;to
+																	<span t-field="mids_tracking.new_value_char"/>
+																]
+															</t>
+														</t>
+													</t>
+												</td>
+											</t>
 										</tr>
 										<tr>
-											<td colspan="2" class="noborder" style="text-align:left;font-size:7pt;">
+											<td colspan="2" class="noborder" style="text-align:left;font-size:10pt;">
 												&#160;
 											</td>
-											<td class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval GM Finance'">
@@ -986,7 +995,7 @@
 													</t>
 												</t>
 											</td>
-											<td colspan="3" class="noborder" style="text-align:left;font-size:7pt;">
+											<td class="noborder" style="text-align:left;font-size:10pt;">
 												<t t-foreach="o.message_ids" t-as="mids">
 													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 														<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval GM Finance'">
@@ -1003,6 +1012,24 @@
 													</t>
 												</t>
 											</td>
+											<t t-foreach="o.message_ids" t-as="mids">
+												<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+													<t t-if="mids_tracking.field == 'state' and mids_tracking.old_value_char == 'Approval Director'">
+														<t t-if="is_director_approval == 0">
+													    	<td style="border-right: 1px solid; border-left: 1px solid; border-bottom: 1px solid; text-align:center;font-size:10pt;" colspan="2">
+							                                    <br/>
+							                                    <br/>
+							                                    <br/>
+							                                    <u>
+															        &#160;Stanley Atmadja&#160;
+																</u>
+																<br/>
+																	&#160;President Director&#160;
+															</td>   
+													    </t>
+													</t>
+												</t>
+											</t>
 										</tr>
 									</table>
 								</div>
