--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -280,7 +280,7 @@
           <field name="name">Email Template New Purchase Tender</field>
           <field name="email_from">admin@palmagroup.co.id</field>
           <field name="subject">[SYS] PR Full Approve ${object.request_id.complete_name}</field>
-          <field name="email_to">procurement.ho@palmagroup.co.id</field>
+          <field name="email_to">mery@palmagroup.co.id,procurement.ho@palmagroup.co.id,dedy.iswandi@palmagroup.co.id</field>
           <field name="lang">${object.lang}</field>
           <field name="model_id" ref="purchase_requisition.model_purchase_requisition"/>
           <field name="auto_delete" eval="True"/>
