--- a/purchase_indonesia_account/views/inherit_account_invoice.xml
+++ b/purchase_indonesia_account/views/inherit_account_invoice.xml
@@ -7,8 +7,10 @@
              <field name="arch" type="xml">
 
                  <xpath expr="//field[@name='reference']" position="after">
-                      <field name="picking_id" string="Picking"/>
-                      <field name="grn_srn_no" string="GRN/SRN No"/>
+               		<field name="purchase_request_id" string="Purchase Request"/>
+               		<field name="purchase_id_bill" string="Purchase Order"/>
+                  	<field name="picking_id" string="Picking"/>
+                   	<field name="grn_srn_no" string="GRN/SRN No"/>
                  </xpath>
                  <xpath expr="//field/tree/field[@name='product_id']" position="before">
                      <field name="picking_id" string="Picking"/>
